  NOTE: slow spamfilter detection is currently not available on Windows.
  NOTE 2: to disable slow detection you can set the warn and fatal settings
  to 0 (zero). OR to really disable all code, remove SPAMFILTER_DETECTSLOW
  from include/config.h and recompile.
- Added another Mac OS X hack, such as one that should help against
  'error setting max fd's to 9223372036854775807' which prevents the ircd
  from booting up. Reported by btcentral and Bock. This hack might not be
  totally correct though ;).
- Limit watch status requests to one per time, more will often flood you off
  and is stupid/useless. Reported by ash11.
- The OS version output is now taken from uname() at runtime instead of
  'uname -a' at compile time. This fixes bug #1438 and #3320 reported by
  Mouse and Monk, where because of previous behavior the IRCd sometimes would
  not compile in certain environments.
- configure script is now generated by autoconf 2.61 (was: 2.59), hopefully
  that won't cause any issues, perhaps it even helps to fix some bugs...
- #0001740 reported by Trocotronic, making the IRCd send ERROR : to all
  links with possible reason for RESTART; like /die does it. [Backport, sts]
- Added set::ssl::server-cipher-list, #002368 requested by Beastie
  [Backport, sts]
- Added set::ssl::renegotiate-bytes, set::ssl:renegotiate-timeout, #0002971
  suggested by tabrisnet. Gets activated when >0. Please set sane values.
  [Backport, sts]
- #0002475 reported by aquanight on detecting \'s in module filenames on
  win32 and not do ./module for it [Backport]
- #0002172 reported by Stealth, patched by WolfSage, fixing if you have an
  admin block, and forget a semicolon on a line, Unreal will proceed to use
  the block with no error, but the information will be incorrect/incomplete.
  [Backport, WolfSage]
- #0002833 reported and patched by tabrisnet, implementing UHNAMES
  [Backport, only slightly modified for speed]